--- a/ru/index.html
+++ b/ru/index.html
@@ -58,13 +58,13 @@
         "@type": "Article",
         "name": "Цели",
         "articleBody": [
-        "Сегодняшний интернет обладает рядом недостатков. Наиболее важным является его централизованная природа, вследствие чего интернет подвержен ограничениям и цензуре со стороны корпораций и государств. Смешение данных и представления приводят к техническим недостаткам. Каждая веб-страница содержит в себе не только нужные вам данные, но и “обертку” — правила, по которым браузер понимает, как нужно отобразить страницу. С развитием интернета эти обертки стали весить столько, что полезные данные иногда составляют всего 5-10% от размера страницы. На первый взгляд это может показаться не столь уж важным, но размер страниц не только влияет на стоимость интернет-услуг (что может быть особенно весомым фактором в случае мобильного интернета), но и напрямую влияет на скорость загрузки, а значит и на время вашего ожидания. Такой подход также существенно усложняет машинную обработку, что жизненно необходимо для быстроты и точности обработки ваших поисковых запросов. К сожалению, интернет-страницы представляют собой мешанину, из которой поисковым системам сложно извлечь нужные данные. В итоге интернет не обладает тем, что изначально было задумано создателем веба Бернерсом Ли — семантикой.",
+        "Сегодняшний интернет обладает рядом недостатков. Наиболее важным является его централизованная природа, вследствие чего интернет подвержен ограничениям и цензуре со стороны корпораций и государств. Смешение данных и представления приводят к техническим недостаткам. Каждая веб-страница содержит в себе не только нужные вам данные, но и “обертку” — правила, по которым браузер понимает, как нужно отобразить страницу. С развитием интернета эти обертки стали весить столько, что полезные данные иногда составляют всего 5-10% от размера страницы. На первый взгляд это может показаться не столь уж важным, но размер страниц не только влияет на стоимость интернет-услуг (что может быть особенно весомым фактором в случае мобильного интернета), но и напрямую влияет на скорость загрузки, а значит и на время вашего ожидания. Смешение данных и представления существенно усложняет машинную обработку и затрудняет сортировку и каталогизацию информации поисковыми системами, что отрицательно сказывается на точности и релевантности их ответов на ваши запросы. В итоге интернет не обладает тем, что изначально было задумано создателем веба Бернерсом Ли — семантикой.",
         "WRIO OS призвана исправить перечисленные недостатки и ставит своей задачей выполнение следующих пунктов:",
         "* семантический веб — “это общедоступная глобальная сеть каталогизированных данных, формируемая на базе Всемирной паутины путём стандартизации представления информации в виде, пригодном для машинной обработки” (википедия). Такой веб позволит находить нужную информацию с легкостью и точностью, недоступной сегодня. Семантика связана с еще одной очень важной особенностью — открытостью",
         "* открытость дает возможность чтения данных лежащих на сторонних серверах без ограничений. Это подразумевает использование первоначальных источников без необходимости в многократном дублировании и потери связанности. Сегодня данные “закрыты”, то есть если вы хотите использовать их на своей странице, вы должны либо скопировать их к себе, либо, в лучшем случае, получить их через API, что нередко сопряжено с техническими либо финансовыми ограничениями. Помимо этого могут возникнуть проблемы, связанные с опостылевшим всему свободному интернету копирайтом, вопрос которого мы отдельно рассмотрим в разделе Open Copyright",
         "* децентрализованность. Открытость веба, в свою очередь, позволяет построить децентрализованный интернет, что не только предоставит свободный доступ к информации, но и выведет публичные пользовательские данные из-под контроля корпораций и соцсетей. Если вы считаете эту проблему надуманной и придерживаетесь клише “кому я нужен”, то прочтите раздел “Мне нечего скрывать”.",
         "Децентрализованность также означает устойчивость к настойчивым попыткам контроля и цензуры со стороны государств и массовой слежке",
-        "* безопасность. Каждый раз открывая неизвестный сайт вы рискуете столкнуться со спамом, вирусами, вредоносными программами и другими интернет-угрозами. Все потому, что код, встроенный в веб-страницу, помимо добавления интерактивности и функционала может предоставлять опасность и выполнять код злоумышленников. В отдельной главе мы рассмотрим вопрос безопасности и как помогает в этом вопросе WRIO OS",
+        "* безопасность. Каждый раз открывая неизвестный сайт вы рискуете столкнуться со спамом, вирусами, вредоносными программами и другими интернет-угрозами. Все потому, что код, встроенный в веб-страницу, помимо добавления интерактивности и функционала может предоставлять опасность, запускать и скачивать программы злоумышленников. В отдельной главе мы рассмотрим вопрос безопасности и как помогает в этом вопросе WRIO OS",
         "Мы затронули далеко не все недостатки сегодняшнего интернета и последующие главы расскажут больше. Пока лишь стоит отметить, что решение каждой из проблем открывает новые возможности для всех нас, как пользователей. С каждой прочитанной главой перед нами будут раскрываться новые детали, показывая, как все еще молод интернет, что мы лишь в начале пути его развития и потенциал этого великого изобретения человечества далек от своего полного раскрытия. Книга расскажет нам про множество различных чудесных технологий, которые помогут перевести веб на качественно новый уровень: покажет нам каким он станет, что для этого нужно, что это даст и как это в итоге изменит каждого из нас в отдельности и общество в целом, а в итоге и все мироустройство."
         ]
         },
@@ -270,13 +270,13 @@
         "@type": "Article",
         "name": "Синтаксический анализ",
         "about": "Процесс сопоставления линейной последовательности лексем (слов, токенов) естественного или формального языка с его формальной грамматикой.",
-        "url": "https://ru.wikipedia.org/wiki/Синтаксический_анализ?'машинную обработку':19,857,external"
+        "url": "https://ru.wikipedia.org/wiki/Синтаксический_анализ?'машинную обработку':19,873,external"
         },
         {
         "@type": "Article",
         "name": "Тим Бернерс-Ли",
         "about": "Британский учёный, изобретатель URI, URL, HTTP, HTML, создатель Всемирной паутины (совместно с Робертом Кайо) и действующий глава Консорциума Всемирной паутины. Автор концепции семантической паутины.",
-        "url": "https://ru.wikipedia.org/wiki/Бернерс-Ли,_Тим?'Бернерсом Ли':19,1159,external"
+        "url": "https://ru.wikipedia.org/wiki/Бернерс-Ли,_Тим?'Бернерсом Ли':19,1129,external"
         },
         {
         "@type": "Article",
@@ -324,7 +324,7 @@
         "@type": "Article",
         "name": "Безопасность",
         "about": "Описание.",
-        "url": "#?'отдельной главе':25,310"
+        "url": "#?'отдельной главе':25,330"
         },
         {
         "@type": "Article",
