--- a/index.html
+++ b/index.html
@@ -289,15 +289,15 @@
         },
         {
         "@type": "Article",
-        "name": "Вредоносная программа",
-        "about": "На жаргоне некоторых специалистов «вирус», англ. malware, malicious software — «злонамеренное программное обеспечение» — любое программное обеспечение, предназначенное для получения несанкционированного доступа к вычислительным ресурсам самой ЭВМ или к информации, хранимой на ЭВМ, с целью несанкционированного использования ресурсов ЭВМ или причинения вреда (нанесения ущерба) владельцу информации, и/или владельцу ЭВМ, и/или владельцу сети ЭВМ, путём копирования, искажения, удаления или подмены информации.",
-        "url": "https://ru.wikipedia.org/wiki/Вредоносная_программа?'вредоносными программами':25,98,external"
+        "name": "",
+        "about": "Malware, short for malicious software, is any software used to disrupt computer operations, gather sensitive information, gain access to private computer systems, or display unwanted advertising.",
+        "url": "https://en.wikipedia.org/wiki/Malware?'malware':25,102,external"
         },
         {
         "@type": "Article",
-        "name": "Безопасность",
-        "about": "Описание.",
-        "url": "#?'отдельной главе':25,330"
+        "name": "Security",
+        "about": "No info yet.",
+        "url": "#?'separate chapter':25,381"
         },
         {
         "@type": "Article",
