--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="WRIO Internet OS hub">
     <meta name="author" content="webRunes">
     <meta name="keywords" content="WRIO, Internet OS">
-    <meta name="google-site-verification" content="wW3kG-1bD4IishxXaidLtiLMKNTR3S0MH7Dnd3HpoY8">
     <title>WRIO Internet OS</title>
 
     <script type="application/ld+json">
@@ -110,7 +109,7 @@
         {
         "@type": "Article",
         "name": "",
-        "about": "The Semantic Web provides a common framework that allows data to be shared and reused across application, enterprise, and community boundaries". The term was coined by Tim Berners-Lee for a web of data that can be processed by machines.",
+        "about": "The Semantic Web provides a common framework that allows data to be shared and reused across application, enterprise, and community boundaries. The term was coined by Tim Berners-Lee for a web of data that can be processed by machines.",
         "url": "https://en.wikipedia.org/wiki/Semantic_Web?'semantic':6,83,external"
         },
         {
