--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         {
         "@type": "Article",
         "name": "",
-        "about": "The Semantic Web provides a common framework that allows data to be shared and reused across application, enterprise, and community boundaries". The term was coined by Tim Berners-Lee for a web of data that can be processed by machines.",
+        "about": "The Semantic Web provides a common framework that allows data to be shared and reused across application, enterprise, and community boundaries. The term was coined by Tim Berners-Lee for a web of data that can be processed by machines.",
         "url": "https://en.wikipedia.org/wiki/Semantic_Web?'semantic':21,236,external"
         },
         {
