--- a/ru/cценарии/index.html
+++ b/ru/cценарии/index.html
@@ -231,7 +231,7 @@
         "@type": "Article",
         "name": "Блокчеин-браузер",
         "about": "Описание.",
-        "url": "#'WRIO OS браузером':21,149"
+        "url": "#?'WRIO OS браузером':21,149"
         },
         {
         "@type": "Article",
