--- a/cover/index.html
+++ b/cover/index.html
@@ -22,14 +22,14 @@
         "contentUrl": "https://wrioos.com/img/cover1.jpg",
         "about": "All You Need Is Browser",
         "text": [
-        "Coming soon."
+        "WRIO Internet OS, or simply WRIO OS, is our window to the decentralized, semantic and secure Internet based on the blockchain technology, with a smart assistant feature. The name originates from the acronym of “webRunes Input/Output Internet Operating System”, and it intends to replace desktop OS’s in the future. The platform is designed for the implementation of Alternative."
         ],
         "mentions": [
         {
         "@type": "Article",
-        "name": "Name",
-        "about": "About.",
-        "url": "#?'text':1,38"
+        "name": "",
+        "about": "An experimental project. Its goal is to provide a decentralized solution for financial, business, legal and all other sectors of the society with a minimal or, ideally, no interference from the government.",
+        "url": "http://alternative.webrunes.org/?'Alternative':3,366"
         }
         ]
         }
