--- a/ru/cценарии/index.html
+++ b/ru/cценарии/index.html
@@ -90,7 +90,7 @@
         "name": "Сценарий 6. Одноранговое взаимодействие (P2P)",
         "articleBody": [
         "Взаимодействие с другими людьми всегда было важной составляющей жизни каждого. Мы постоянно встречаем новых людей, но только опытным путем понимаем кто достоин нашего доверия, а кого следует избегать. Эта двусторонняя проблема и нам также приходиться долго зарабатывать доверие и репутацию среди окружающих, начиная процесс с нуля с новым человеком. Проблема репутации в том, что ее сложно передать за пределы общества в котором вас знают (проблема широкой известности в узких кругах), а вы не знаете тех, кто вне вашего круга общения. Прежде люди худо-бедно решали эту проблему с помощью устной рекомендации общих знакомых и рекомендательных писем, но очевидно, что в сегодняшний век глобализации этого недостаточно.",
-        "С каждым днем появляется все больше людей для которых интернет является самым важным каналом взаимодействия, а число знакомств и деловых контактов растет лавинообразно. Необходим инструмент позволяющий обойти наше физиологическое ограничение в способности поддерживать больше 150 социальных связей и при этом иметь возможность быстро получить всю необходимую информацию о каждом для оценки рисков. Рейтинг предоставляет такую возможность, открывая путь для интернет-торговли нового типа основанной на глобальной системе репутации. Искоренение мошенничества и недобросовестного исполнения обязательств не просто уменьшит риски, но, как мы уже упоминали в разделе “Сценарий 3. Блокчеин”, позволит появиться новому обществу, основанному на репутации и доверии вместо сегодняшнего принуждения и угрозы насилия.",
+        "С каждым днем появляется все больше людей для которых интернет является самым важным каналом взаимодействия, а число знакомств и деловых контактов растет лавинообразно. Необходим инструмент позволяющий обойти наше физиологическое ограничение в неспособности поддерживать больше 150 социальных связей и при этом иметь возможность быстро получить всю необходимую информацию о каждом для оценки рисков. Рейтинг предоставляет такую возможность, открывая путь для интернет-торговли нового типа основанной на глобальной системе репутации. Искоренение мошенничества и недобросовестного исполнения обязательств не просто уменьшит риски, но, как мы уже упоминали в разделе “Сценарий 3. Блокчеин”, позволит появиться новому обществу, основанному на репутации и доверии вместо сегодняшнего принуждения и угрозы насилия.",
         "Подобная система будет использоваться повсеместно, не только в личной, но и в гражданской и профессиональной сферах."
         ]
         },
@@ -157,9 +157,15 @@
         },
         {
         "@type": "Article",
+        "name": "Массовая культура",
+        "about": "Массовая культура или поп-культура, масскультура, культура большинства — культура быта, развлечений и информации, преобладающая в современном обществе. Она включает в себя такие явления, как средства массовой информации (включая телевидение и радио), спорт, кинематограф, музыка, массовая литература, изобразительное искусство и т. д.",
+        "url": "https://ru.wikipedia.org/wiki/Массовая_культура?'культуры масс':5,909"
+        },
+        {
+        "@type": "Article",
         "name": "Альтернатива. Культура и общественное творчество",
         "about": "Описание.",
-        "url": "#?'Альтернатива. Культура и общественное творчество':5,1250"
+        "url": "#?'Альтернатива. Культура и общественное творчество':5,1255"
         },
         {
         "@type": "Article",
@@ -249,7 +255,7 @@
         "author": "https://wrioos.com/ru/"
         }
     </script>
-    
+
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
