--- a/cover/index.html
+++ b/cover/index.html
@@ -22,7 +22,12 @@
         "contentUrl": "https://wrioos.com/img/cover1.jpg",
         "about": "All You Need Is Browser",
         "text": [
-        "WRIO Internet OS, or simply WRIO OS, is our window to the decentralized, semantic and secure Internet based on the blockchain technology, with a smart assistant feature. The name originates from the acronym of “webRunes Input/Output Internet Operating System”, and it intends to replace desktop OS’s in the future. The platform is designed for the implementation of Alternative."
+        "WRIO Internet OS, or simply WRIO OS, is our window to the decentralized, semantic and secure Internet based on the blockchain technology, with a smart assistant feature. The name originates from the acronym of “webRunes Input/Output Internet Operating System”, and it intends to replace desktop OS’s in the future. The platform is designed for the implementation of Alternative.",
+        "Features:",
+        "* security",
+        "* anonymity",
+        "* decentralization",
+        "* cryptography"
         ],
         "mentions": [
         {
