--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
         "@type": "Article",
         "name": "",
         "about": "Mass surveillance is the intricate surveillance of an entire or a substantial fraction of a population in order to monitor that group of citizens. The surveillance is often carried out by governments or governmental organisations, but may also be carried out by corporations, either on behalf of governments or at their own initiative. Depending on each nation's laws and judicial systems, the legality of and the permission required to engage in mass surveillance varies.",
-        "url": "https://en.wikipedia.org/wiki/Mass_surveillance?'transfer to government entities':8,1296,external,En"
+        "url": "https://en.wikipedia.org/wiki/Mass_surveillance?'transfer to government entities':8,1296,external"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "The nothing to hide argument states that government surveillance programs do not threaten privacy unless they uncover illegal activities, and that if they do uncover illegal activities, the person committing these activities does not have the right to keep them private. Hence, a person who favors this argument may state “I've got nothing to hide” and therefore does not express opposition to government surveillance. An individual using this argument may say that a person should not have worries about government or surveillance if he/she has “nothing to hide.”",
-        "url": "https://en.wikipedia.org/wiki/Nothing_to_hide_argument?'loss of freedom':8,1476,external,En"
+        "url": "https://en.wikipedia.org/wiki/Nothing_to_hide_argument?'loss of freedom':8,1476,external"
         },
         {
         "@type": "Article",
@@ -194,13 +194,13 @@
         "@type": "Article",
         "name": "",
         "about": "The dark web is the World Wide Web content that exists on darknets, overlay networks which use the public Internet but which require specific software, configurations or authorization to access. The dark web forms a small part of the deep web, the part of the Web not indexed by search engines, although sometimes the term “deep web” is confusingly used to refer specifically to the dark web.",
-        "url": "https://en.wikipedia.org/wiki/Semantic_Web#Web_3.0?'symbiosis with various anonymous networks':11,187,external,En"
+        "url": "https://en.wikipedia.org/wiki/Semantic_Web#Web_3.0?'symbiosis with various anonymous networks':11,187,external"
         },
         {
         "@type": "Article",
         "name": "Isomorphic JavaScript Applications — the Future of the Web?",
         "about": "One of the best known mottos around the web is Java’s Write once, run everywhere. But does this motto apply to Java only? Can we use it to describe JavaScript too? The answer is Yes.",
-        "url": "http://www.sitepoint.com/isomorphic-javascript-applications/?'isomorphic JavaScript application':12,14,external,En"
+        "url": "http://www.sitepoint.com/isomorphic-javascript-applications/?'isomorphic JavaScript application':12,14,external"
         },
         {
         "@type": "Article",
@@ -218,7 +218,7 @@
         "@type": "Article",
         "name": "Web 3.0",
         "about": "People keep asking what Web 3.0 is. I think maybe when you've got an overlay of scalable vector graphics – everything rippling and folding and looking misty – on Web 2.0 and access to a semantic Web integrated across a huge space of data, you'll have access to an unbelievable data resource … — Tim Berners-Lee, 2006.",
-        "url": "https://en.wikipedia.org/wiki/Semantic_Web#Web_3.0?'веб 3.0':15,215,external,En"
+        "url": "https://en.wikipedia.org/wiki/Semantic_Web#Web_3.0?'веб 3.0':15,215,external"
         },
         {
         "@type": "Article",
@@ -308,7 +308,7 @@
         "@type": "Article",
         "name": "Mobile Overtakes Desktops in 2013: Microsoft Be Warned",
         "about": "Time is ticking for Microsoft. With the sales of mobile devices having already overtaken PCs, the total number of in-use Internet-connected mobile devices will overtake desktop computers some time this year, and Microsoft is still fumbling in the mobile arena. If the company can't get mobile right, investors will pay the price for Microsoft's missteps.",
-        "url": "http://www.fool.com/investing/general/2013/01/19/mobile-overtakes-desktops-in-2013-microsoft-be-war.aspx?'Китае это произошло еще в 2013 году':29,237,external,En"
+        "url": "http://www.fool.com/investing/general/2013/01/19/mobile-overtakes-desktops-in-2013-microsoft-be-war.aspx?'Китае это произошло еще в 2013 году':29,237,external"
         },
         {
         "@type": "Article",
@@ -332,7 +332,7 @@
         "@type": "Article",
         "name": "Scale-free network",
         "about": "A scale-free network is a network whose degree distribution follows a power law, at least asymptotically.",
-        "url": "https://en.wikipedia.org/wiki/Scale-free_network?'облачные вычисления':33,460,external,En"
+        "url": "https://en.wikipedia.org/wiki/Scale-free_network?'облачные вычисления':33,460,external"
         },
         {
         "@type": "Article",
@@ -410,7 +410,7 @@
         "@type": "Article",
         "name": "The Number of Active Websites on the Internet",
         "about": "If you are running a blog or website, you must have wondered how big is the Internet and how many websites that we need to compete. When I create a new website, I often see it soon reaches the Alexa rank of over 27 millions and I thought that there are just above 30 million sites. However, according the a recent web server survey from Netcraft, the total number of active websites are much higher than we can imagine.",
-        "url": "http://www.techwalls.com/number-active-websites-on-internet-2011/?'постоянно увеличивается':36,483,external,En"
+        "url": "http://www.techwalls.com/number-active-websites-on-internet-2011/?'постоянно увеличивается':36,483,external"
         },
         {
         "@type": "Article",
@@ -440,7 +440,7 @@
         "@type": "Article",
         "name": "Web of Trust",
         "about": "In cryptography, a web of trust is a concept used in PGP, GnuPG, and other OpenPGP-compatible systems to establish the authenticity of the binding between a public key and its owner. Its decentralized trust model is an alternative to the centralized trust model of a public key infrastructure (PKI), which relies exclusively on a certificate authority (or a hierarchy of such). As with computer networks, there are many independent webs of trust, and any user (through their identity certificate) can be a part of, and a link between, multiple webs.",
-        "url": "https://en.wikipedia.org/wiki/Web_of_trust?'Web of Trust':38,304,external,En"
+        "url": "https://en.wikipedia.org/wiki/Web_of_trust?'Web of Trust':38,304,external"
         },
         {
         "@type": "Article",
@@ -554,7 +554,7 @@
         "@type": "Article",
         "name": "Wikipedia:Stub",
         "about": "A stub is an article deemed too short to provide encyclopedic coverage of a subject. The objective of this page is to provide a general guide for dealing with stubs.",
-        "url": "https://en.wikipedia.org/wiki/Wikipedia:Stub?'статью-заготовку':49,19,external,En"
+        "url": "https://en.wikipedia.org/wiki/Wikipedia:Stub?'статью-заготовку':49,19,external"
         },
         {
         "@type": "Article",
@@ -596,7 +596,7 @@
         "@type": "Article",
         "name": "The overweight web: Average web page size is up 15% in 2014",
         "about": "Bigger isn’t better when it comes to web pages, but the internet has continued to put on weight this year. According to the 2014 report from the HTTP Archive, the average size of a web page is up 15 percent this year to 1,935Kb — just shy of 2Mb (or 2,048 Kb) per page. This includes an average of 95 HTTP pull requests per page.",
-        "url": "https://gigaom.com/2014/12/29/the-overweight-web-average-web-page-size-is-up-15-in-2014/?'The overweight web: Average web page size is up 15% in 2014':56,2,external,En"
+        "url": "https://gigaom.com/2014/12/29/the-overweight-web-average-web-page-size-is-up-15-in-2014/?'The overweight web: Average web page size is up 15% in 2014':56,2,external"
         }
         ],
         "image": [
