Ru misspellings fixed

--- a/ru/cценарии/index.html
+++ b/ru/cценарии/index.html
@@ -41,7 +41,7 @@
         "* несмотря на то, что данные по-прежнему могут храниться на разных доменах и серверах как и в случае с обычными сайтами, благодаря унификации пользовательского интерфейса переход от одной страницы к другой визуально воспринимается как навигация в пределах одного сайта",
         "* открытие последующих страниц больше не требует загрузки оболочки, что экономит трафик и существенно уменьшает время отклика",
         "* статическая природа данных позволяет просматривать и работать оффлайн с ранее полученными данными",
-        "* техтовый формат безопасен по умолчанию с определенными оговорками",
+        "* текстовый формат безопасен по умолчанию с определенными оговорками",
         "* ноды WRIO OS могут работать как мост для получения доступа к заблокированным ресурсам. В случае блокировки ноды пользователь может воспользоваться WRIO OS браузером либо поднять собственную ноду",
         "* доступ к зашифрованным данным закрыт для всех кроме пользователя и его доверенных лиц",
         "Защиту от вирусов и мошенников мы детально рассмотрим отдельно."
