--- a/ru/index.html
+++ b/ru/index.html
@@ -22,6 +22,13 @@
         "description": "Обложки для хаба WRIO Internet OS",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
         "url": "https://wrioos.com/ru/обложка/?cover"
+        },
+        {
+        "@type": "ItemList",
+        "name": "ДАО",
+        "description": "Информация о ДАО",
+        "image": "https://wrioos.com/img/cover1-200x200.jpg",
+        "url": "https://wrioos.com/ru/дао/"
         }
         ]
         }
@@ -109,8 +116,12 @@
         },
         {
         "@type": "Article",
+        "inLanguage": "Ru",
         "name": "Сценарии использования",
         "about": "Раздел описывает различные сценарии использования WRIO Internet OS с детальным описанием решаемых проблем.",
+        "author": "https://aa.wr.io/ru?'Алексей Аншаков'",
+        "datePublished": "2016-07-16",
+        "dateModified": "2016-10-09",
         "url": "https://wrioos.com/ru/cценарии"
         }
         ],
