--- a/ru/дао/index.html
+++ b/ru/дао/index.html
@@ -24,17 +24,27 @@
         "hasPart": [
         {
         "@type": "Article",
-        "name": "Инвестиции",
+        "name": "Посевные инвестиции",
         "articleBody": [
-        "Посевные инвестиции",
-        "Объем: 1,000,000 токенов",
-        "Цена: 0.001 ☉ · Привлечено средств: 1,000 ☉",
-        "Начало: Март 28, 2016 * · Завершение: Март 28, 2016",
-        "Status: Sold",
+        "Объем: 1 000 000 токенов",
+        "Цена: 0.001 ☉",
+        "Привлечено средств: 1 000 ☉",
+        "Начало: 28 марта 2016 * · Завершение: 28 марта 2016",
+        "Статус: Продано",
         "* отсчет ведется с момента регистрации ДАО WRIO Internet OS в Альтернативе"
         ]
-        }
+        },
+        {
+        "@type": "Article",
+        "name": "Посевные инвестиции",
+        "articleBody": [
+        "Объем: 2 000 000 токенов · Итого: 3 000 000",
+        "Цена: 0.002 ☉ · Factor: ↑ x2",
+        "Привлечено средств: 4 000 ☉ · Итого: 5,000 ☉",
+        "Начало: 28 апреля 2016 · Завершение: 28 апреля 2016",
+        "Статус: Продано"
         ]
+        }
         ],
         "author": "https://wrioos.com/ru/"
         }
