--- a/ru/index.html
+++ b/ru/index.html
@@ -22,7 +22,17 @@
         "description": "Обложки для хаба WRIO Internet OS",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
         "url": "https://wrioos.com/ru/обложка/?cover"
-        },
+        }
+        ]
+        }
+    </script>
+
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "ItemList",
+        "name": "ДАО",
+        "itemListElement": [
         {
         "@type": "ItemList",
         "name": "ДАО",
