--- a/ru/index.html
+++ b/ru/index.html
@@ -37,7 +37,7 @@
         {
         "@type": "ItemList",
         "name": "ДАО",
-        "description": "Информация о ДАО",
+        "description": "Раздел содержит всю необходимую информацию касательно структуры ДАО, финансов и стратегии развития.",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
         "url": "https://wrioos.com/ru/дао/"
         }
