--- a/ru/дао/index.html
+++ b/ru/дао/index.html
@@ -105,14 +105,26 @@
         {
         "@type": "Article",
         "name": "",
+        "about": "Описание ДАО.",
+        "url": "#?'ДАО':10,39"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Эксперементальный проект. Его цель — попытка предоставить децентрализованные решения в сфере финансов, бизнеса, законов и всех остальных сфер общества с минимальным, а в идеале вовсе без вмешательства государства.",
+        "url": "https://alternative.webrunes.org/ru/?'Альтернативе':10,62"
+        },
+        {
+        "@type": "Article",
+        "name": "",
         "about": "Описание финансовой стратегии.",
-        "url": "https://wrioos.com/ru/дао#Финансовая_стратегия?'дохода ДАО':40,239"
+        "url": "https://wrioos.com/ru/дао#Финансовая_стратегия?'дохода ДАО':42,239"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Описание процесса голосования.",
-        "url": "#?'голосов':40,266"
+        "url": "#?'голосов':41,266"
         },
         {
         "@type": "Article",
