DAO Ru page upd

--- a/ru/index.html
+++ b/ru/index.html
@@ -23,13 +23,6 @@
         "description": "Обложки для хаба WRIO Internet OS",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
         "url": "https://wrioos.com/ru/обложка/?cover"
-        },
-        {
-        "@type": "Article",
-        "name": "ДАО",
-        "description": "Раздел содержит всю необходимую информацию касательно структуры ДАО, финансов и стратегии развития.",
-        "image": "https://wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://wrioos.com/ru/дао/"
         }
         ]
         }
@@ -684,6 +677,24 @@
         "author": "",
         "editor": "",
         "comment": "575551107394633729"
+        }
+    </script>
+
+
+    <script type="application/ld+json">
+        {
+        "@context": "http://schema.org",
+        "@type": "ItemList",
+        "name": "DAO",
+        "itemListElement": [
+        {
+        "@type": "ItemList",
+        "name": "ДАО",
+        "description": "Раздел содержит всю необходимую информацию касательно структуры ДАО, финансов и стратегии развития.",
+        "image": "https://wrioos.com/img/cover1-200x200.jpg",
+        "url": "https://aa.wr.io/dao.html"
+        }
+        ]
         }
     </script>
     
