--- a/ru/дао/дао_стек/index.html
+++ b/ru/дао/дао_стек/index.html
@@ -7,27 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="webRunes">
-    <meta name="keywords" content="WRIO Internet OS, ДАО">
-    <title>ДАО</title>
+    <meta name="keywords" content="WRIO Internet OS, ДАО, стек">
+    <title>Финансовая отчётность</title>
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
-        "@type": "ItemList",
-        "name": "My list",
-        "itemListElement": [
-        {
+        "@context": "https://schema.org",
         "@type": "Article",
-        "inLanguage": "En",
-        "name": "webRunes",
-        "about": "Официальная страница webRunes и ноды webrunes.com. Здесь вы можете не только следить за новостями проекта, но и даже купить share компании.",
-        "image": "https://domain1.com/image1.jpg",
-        "url": "https://webrunes.com"
-        }
-        ]
+        "inLanguage": "Ru",
+        "keywords": "WRIO Internet OS, ДАО, стек",
+        "name": "ДАО стек",
+        "about": "Список используемых ДАО.",
+        "articleBody": [
+        "[Информация будет добавлена позже]"
+        ],
+        "author": "https://wrioos.com/ru/"
         }
     </script>
-    
+
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
