Ru DAO pages: dao stack and strategies

--- a/ru/дао/финансовая_отчётность/index.html
+++ b/ru/дао/финансовая_отчётность/index.html
@@ -17,7 +17,7 @@
         "inLanguage": "Ru",
         "keywords": "WRIO Internet OS, ДАО, финансовая отчётность",
         "name": "Финансовая отчётность",
-        "about": "Совокупность показателей учёта, отражённых в форме определённых таблиц и характеризующих движение имущества, обязательств и финансовое положение компании за отчётный период. Финансовая отчётность представляет собой систему данных о финансовом положении компании, финансовых результатах её деятельности и изменениях в её финансовом положении и составляется на основе данных бухгалтерского учёта.",
+        "about": "Финансовая отчётность представляет собой систему данных о финансовом положении компании, финансовых результатах её деятельности и изменениях в её финансовом положении и составляется на основе данных бухгалтерского учёта.",
         "articleBody": [
         "[Информация будет добавлена позже]"
         ],
