--- a/ru/дао/index.html
+++ b/ru/дао/index.html
@@ -14,15 +14,45 @@
         {
         "@context": "http://schema.org",
         "@type": "ItemList",
-        "name": "My list",
+        "name": "ДАО",
+        "description": "Страница содержит ссылки на разделы со всей информацией по структуре, финансам и стратегии развития ДАО WRIO Internet OS.",
         "itemListElement": [
         {
         "@type": "Article",
-        "inLanguage": "En",
-        "name": "webRunes",
-        "about": "Официальная страница webRunes и ноды webrunes.com. Здесь вы можете не только следить за новостями проекта, но и даже купить share компании.",
-        "image": "https://domain1.com/image1.jpg",
-        "url": "https://webrunes.com"
+        "name": "ДАО-cтек",
+        "about": "Список используемых ДАО. Каждая из них получает свою долю из автоматически отчисляемого 1% от дохода ДАО по условиям использования Open Copyright.",
+        "image": "",
+        "datePublished": "2016-07-16",
+        "dateModified": "2016-10-09",
+        "url": "https://wrioos.com/ru/дао/дао-стек"
+        },
+        {
+        "@type": "Article",
+        "name": "Инвестиции и токены",
+        "about": "Нет описания.",
+        "image": "",
+        "url": "https://wrioos.com/ru/дао/инвестиции_и_токены"
+        },
+        {
+        "@type": "Article",
+        "name": "Стратегия развития",
+        "about": "Страница содержит краткую информацию по стратегии финансирования и продвижения. Будет со временем наполняться деталями.",
+        "image": "",
+        "url": "https://wrioos.com/ru/дао/стратегия_развития"
+        },
+        {
+        "@type": "Article",
+        "name": "Финансовая отчётность",
+        "about": "Финансовая отчётность представляет собой систему данных о финансовом положении компании, финансовых результатах её деятельности и изменениях в её финансовом положении и составляется на основе данных бухгалтерского учёта.",
+        "image": "",
+        "url": "https://wrioos.com/ru/дао/финансовая_отчётность"
+        },
+        {
+        "@type": "Article",
+        "name": "Команда",
+        "about": "Мы — первая ad hoc команда свободных специалистов в IT и не только областях, разрабатывающая платформу WRIO Internet OS.",
+        "image": "https://webrunes.com/img/cover1-200x200.png",
+        "url": "https://webrunes.com/ru/команда"
         }
         ]
         }
