Ru url fix for DAO page

--- a/ru/index.html
+++ b/ru/index.html
@@ -692,7 +692,7 @@
         "name": "ДАО",
         "description": "Раздел содержит всю необходимую информацию касательно структуры ДАО, финансов и стратегии развития.",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://aa.wr.io/dao.html"
+        "url": "https://wrioos.com/ru/дао"
         }
         ]
         }
