--- a/ru/index.html
+++ b/ru/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="WRIO Internet OS">
     <title>WRIO Internet OS</title>
 
-    
+
     <script type="application/ld+json">
         {
         "@context": "https://schema.org",
@@ -37,9 +37,9 @@
         "name": "WRIO Internet OS",
         "about": "Ваше окно в мир децентрализованного, семантического и безопасного интернета на базе технологии блокчеина, с функцией умного помощника.",
         "articleBody": [
-        "/* Данная белая книга рассчитана на широкий круг читателей. Вам не нужно разбираться в тонкостях работы интернета, чтобы понять основные идеи. Однако те читатели, что пожелают вникнуть в технические детали, смогут найти их в разделе “Архитектура WRIO OS”. */",
-        "/* Проект находится в начальной стадии разработки, описанный ниже функционал будет добавляться по мере его развития. */",
-        "/* Просим прощения за множество английских непереведенных названий и терминов. После размышлений было решено оставить их как уже устоявшиеся в обществе, либо из-за отсутствия точного аналога, что вносило искажения в восприятие при переводе. */",
+        "<! Данная белая книга рассчитана на широкий круг читателей. Вам не нужно разбираться в тонкостях работы интернета, чтобы понять основные идеи. Однако те читатели, что пожелают вникнуть в технические детали, смогут найти их в разделе “Архитектура WRIO OS”. !>",
+        "<! Проект находится в начальной стадии разработки, описанный ниже функционал будет добавляться по мере его развития. !>",
+        "<! Просим прощения за множество английских непереведенных названий и терминов. После размышлений было решено оставить их как уже устоявшиеся в обществе, либо из-за отсутствия точного аналога, что вносило искажения в восприятие при переводе. !>",
         "WRIO Internet OS или просто WRIO OS — ваше окно в мир децентрализованного, семантического и безопасного интернета на базе технологии блокчеина, с функцией умного помощника. Название является акронимом “webRunes Input/Output Internet Operating System” и подразумевает в дальнейшем полную замену десктопных операционных систем.",
         "На заре появления компьютеров из-за их автономности была необходимость в десктопных операционных системах, теперь, в век развития интернета, появилась возможность использовать ресурсы сети, что привело к появлению множества облачных сервисов вроде Dropbox или Netflix. Веб технологии позволяют избавиться от необходимости в установке десктопных программ, но WRIO OS идет еще дальше — создавая и объединяя облачные сервисы, мы приходим к тому, что и сама операционная система больше не нужна. Интернет доступ дает возможность заменить ее одним лишь браузером, что исключает необходимость в мощных процессорах и больших объемах памяти, а широкополостный доступ станет заменой жестким дискам.",
         "Попытки создания веб ОС предпринимались и ранее, однако все они были калькой десктопной ОС, что приводило к созданию системы, призванной выполнять облачные задачи через десктоп-подход и, как следствие, к провалу.",
@@ -60,11 +60,11 @@
         "articleBody": [
         "Сегодняшний интернет обладает рядом недостатков. Наиболее важным является его централизованная природа, вследствие чего интернет подвержен ограничениям и цензуре со стороны корпораций и государств. Смешение данных и представления приводят к техническим недостаткам. Каждая веб-страница содержит в себе не только нужные вам данные, но и “обертку” — правила, по которым браузер понимает, как нужно отобразить страницу. С развитием интернета эти обертки стали весить столько, что полезные данные иногда составляют всего 5-10% от размера страницы. На первый взгляд это может показаться не столь уж важным, но размер страниц не только влияет на стоимость интернет-услуг (что может быть особенно весомым фактором в случае мобильного интернета), но и напрямую влияет на скорость загрузки, а значит и на время вашего ожидания. Смешение данных и представления существенно усложняет машинную обработку и затрудняет сортировку и каталогизацию информации поисковыми системами, что отрицательно сказывается на точности и релевантности их ответов на ваши запросы. В итоге интернет не обладает тем, что изначально было задумано создателем веба Бернерсом Ли — семантикой.",
         "WRIO OS призвана исправить перечисленные недостатки и ставит своей задачей выполнение следующих пунктов:",
-        "* семантический веб — “это общедоступная глобальная сеть каталогизированных данных, формируемая на базе Всемирной паутины путём стандартизации представления информации в виде, пригодном для машинной обработки” (википедия). Такой веб позволит находить нужную информацию с легкостью и точностью, недоступной сегодня. Семантика связана с еще одной очень важной особенностью — открытостью",
-        "* открытость дает возможность чтения данных лежащих на сторонних серверах без ограничений. Это подразумевает использование первоначальных источников без необходимости в многократном дублировании и потери связанности. Сегодня данные “закрыты”, то есть если вы хотите использовать их на своей странице, вы должны либо скопировать их к себе, либо, в лучшем случае, получить их через API, что нередко сопряжено с техническими либо финансовыми ограничениями. Помимо этого могут возникнуть проблемы, связанные с опостылевшим всему свободному интернету копирайтом, вопрос которого мы отдельно рассмотрим в разделе Open Copyright",
-        "* децентрализованность. Открытость веба, в свою очередь, позволяет построить децентрализованный интернет, что не только предоставит свободный доступ к информации, но и выведет публичные пользовательские данные из-под контроля корпораций и соцсетей. Если вы считаете эту проблему надуманной и придерживаетесь клише “кому я нужен”, то прочтите раздел “Мне нечего скрывать”.",
+        " <* семантический веб — “это общедоступная глобальная сеть каталогизированных данных, формируемая на базе Всемирной паутины путём стандартизации представления информации в виде, пригодном для машинной обработки” (википедия). Такой веб позволит находить нужную информацию с легкостью и точностью, недоступной сегодня. Семантика связана с еще одной очень важной особенностью — открытостью *>",
+        "<* открытость дает возможность чтения данных лежащих на сторонних серверах без ограничений. Это подразумевает использование первоначальных источников без необходимости в многократном дублировании и потери связанности. Сегодня данные “закрыты”, то есть если вы хотите использовать их на своей странице, вы должны либо скопировать их к себе, либо, в лучшем случае, получить их через API, что нередко сопряжено с техническими либо финансовыми ограничениями. Помимо этого могут возникнуть проблемы, связанные с опостылевшим всему свободному интернету копирайтом, вопрос которого мы отдельно рассмотрим в разделе Open Copyright *>",
+        "<* децентрализованность. Открытость веба, в свою очередь, позволяет построить децентрализованный интернет, что не только предоставит свободный доступ к информации, но и выведет публичные пользовательские данные из-под контроля корпораций и соцсетей. Если вы считаете эту проблему надуманной и придерживаетесь клише “кому я нужен”, то прочтите раздел “Мне нечего скрывать”. *>",
         "Децентрализованность также означает устойчивость к настойчивым попыткам контроля и цензуры со стороны государств и массовой слежке",
-        "* безопасность. Каждый раз открывая неизвестный сайт вы рискуете столкнуться со спамом, вирусами, вредоносными программами и другими интернет-угрозами. Все потому, что код, встроенный в веб-страницу, помимо добавления интерактивности и функционала может предоставлять опасность, запускать и скачивать программы злоумышленников. В отдельной главе мы рассмотрим вопрос безопасности и как помогает в этом вопросе WRIO OS",
+        "<* безопасность. Каждый раз открывая неизвестный сайт вы рискуете столкнуться со спамом, вирусами, вредоносными программами и другими интернет-угрозами. Все потому, что код, встроенный в веб-страницу, помимо добавления интерактивности и функционала может предоставлять опасность, запускать и скачивать программы злоумышленников. В отдельной главе мы рассмотрим вопрос безопасности и как помогает в этом вопросе WRIO OS *>",
         "Мы затронули далеко не все недостатки сегодняшнего интернета и последующие главы расскажут больше. Пока лишь стоит отметить, что решение каждой из проблем открывает новые возможности для всех нас, как пользователей. С каждой прочитанной главой перед нами будут раскрываться новые детали, показывая, как все еще молод интернет, что мы лишь в начале пути его развития и потенциал этого великого изобретения человечества далек от своего полного раскрытия. Книга расскажет нам про множество различных чудесных технологий, которые помогут перевести веб на качественно новый уровень: покажет нам каким он станет, что для этого нужно, что это даст и как это в итоге изменит каждого из нас в отдельности и общество в целом, а в итоге и все мироустройство."
         ]
         },
@@ -286,55 +286,55 @@
         "@type": "Article",
         "name": "Семантическая паутина",
         "about": "Это общедоступная глобальная семантическая сеть, формируемая на базе Всемирной паутины путём стандартизации представления информации в виде, пригодном для машинной обработки.",
-        "url": "https://ru.wikipedia.org/wiki/Семантическая_паутина?'википедия':21,211,external"
+        "url": "https://ru.wikipedia.org/wiki/Семантическая_паутина?'википедия':21,212,external"
         },
         {
         "@type": "Article",
         "name": "Связанность",
         "about": "Описание.",
-        "url": "#?'использование первоначальных источников':22,109"
+        "url": "#?'использование первоначальных источников':22,110"
         },
         {
         "@type": "Article",
         "name": "API",
         "about": "Интерфейс программирования приложений, интерфейс прикладного программирования (англ. application programming interface, API [эй-пи-ай]) — набор готовых классов, процедур, функций, структур и констант, предоставляемых приложением (библиотекой, сервисом) или операционной системой для использования во внешних программных продуктах. Используется программистами при написании всевозможных приложений.",
-        "url": "https://ru.wikipedia.org/wiki/API?'API':22,380,external"
+        "url": "https://ru.wikipedia.org/wiki/API?'API':22,381,external"
         },
         {
         "@type": "Article",
         "name": "Open Copyright",
         "about": "Описание.",
-        "url": "https://opencopyright.wrioos.com/ru/?'Open Copyright':22,606"
+        "url": "https://opencopyright.wrioos.com/ru/?'Open Copyright':22,607"
         },
         {
         "@type": "Article",
         "name": "Мне нечего скрывать",
         "about": "Описание.",
-        "url": "#?'Мне нечего скрывать':23,350"
+        "url": "#?'Мне нечего скрывать':23,351"
         },
         {
         "@type": "Article",
         "name": "Массовая слежка",
         "about": "Описание.",
-        "url": "#?'массовой слежке':24,133"
+        "url": "#?'массовой слежке':24,134"
         },
         {
         "@type": "Article",
         "name": "Вредоносная программа",
         "about": "На жаргоне некоторых специалистов «вирус», англ. malware, malicious software — «злонамеренное программное обеспечение» — любое программное обеспечение, предназначенное для получения несанкционированного доступа к вычислительным ресурсам самой ЭВМ или к информации, хранимой на ЭВМ, с целью несанкционированного использования ресурсов ЭВМ или причинения вреда (нанесения ущерба) владельцу информации, и/или владельцу ЭВМ, и/или владельцу сети ЭВМ, путём копирования, искажения, удаления или подмены информации.",
-        "url": "https://ru.wikipedia.org/wiki/Вредоносная_программа?'вредоносными программами':25,98,external"
+        "url": "https://ru.wikipedia.org/wiki/Вредоносная_программа?'вредоносными программами':25,99,external"
         },
         {
         "@type": "Article",
         "name": "Безопасность",
         "about": "Описание.",
-        "url": "#?'отдельной главе':25,330"
+        "url": "#?'отдельной главе':25,331"
         },
         {
         "@type": "Article",
         "name": "Облачные вычисления",
         "about": "Информационно-технологическая концепция, подразумевающая обеспечение повсеместного и удобного сетевого доступа по требованию к общему пулу (англ. pool) конфигурируемых вычислительных ресурсов (например, сетям передачи данных, серверам, устройствам хранения данных, приложениям и сервисам — как вместе, так и по отдельности), которые могут быть оперативно предоставлены и освобождены с минимальными эксплуатационными затратами или обращениями к провайдеру.",
-        "url": "https://ru.wikipedia.org/wiki/Облачные_вычисления?'облачные вычисления':28,318,external"
+        "url": "https://ru.wikipedia.org/wiki/Облачные_вычисления?'облачные вычисления':28,319,external"
         },
         {
         "@type": "Article",
@@ -697,7 +697,7 @@
         ]
         }
     </script>
-    
+
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
