--- a/ru/дао/index.html
+++ b/ru/дао/index.html
@@ -29,14 +29,14 @@
         {
         "@type": "Article",
         "name": "Инвестиции и токены",
-        "about": "Нет описания.",
+        "about": "Привлечение инвестиций с помощью выпуска новых токенов напрямую связан с фактором. Фактор — это множитель, значение которого основано на разумно предполагаемых перспективах развития исходя из динамики изменения рейтинга. Рейтинг, в первую очередь, — это значение отражающее уровень популярности и доверия, которое непосредственно влияет на скорость привлечения новых пользователей и, следовательно, определяет стоимость токенов ДАО. Таким образом, именно изменение рейтинга между раундами является основополагающим мерилом для расчета фактора следующего раунда.",
         "image": "",
         "url": "https://wrioos.com/ru/дао/инвестиции_и_токены"
         },
         {
         "@type": "Article",
         "name": "Стратегия развития",
-        "about": "Страница содержит краткую информацию по стратегии финансирования и продвижения. Будет со временем наполняться деталями.",
+        "about": "Страница содержит краткую информацию по стратегии финансирования и продвижения. Cо временем будет наполняться деталями.",
         "image": "",
         "url": "https://wrioos.com/ru/дао/стратегия_развития"
         },
