--- a/ru/дао/дао-стек/index.html
+++ b/ru/дао/дао-стек/index.html
@@ -12,17 +12,22 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
-        "@type": "ItemList",
-        "name": "ДАО",
-        "description": "Страница содержит ссылки на разделы со всей информацией по структуре, финансам и стратегии развития ДАО WRIO Internet OS.",
-        "itemListElement": [
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "inLanguage": "Ru",
+        "keywords": "WRIO Internet OS",
+        "name": "ДАО-стек",
+        "about": "Список используемых ДАО. Каждая из них получает свою долю из автоматически отчисляемого 1% от дохода ДАО по условиям использования Open Copyright.",
+        "articleBody": [
+        "Список используемых ДАО. Каждая из них получает свою долю из автоматически отчисляемого 1% от дохода ДАО по условиям использования Open Copyright."
+        ],
+        "hasPart": [
         {
         "@type": "Article",
         "inLanguage": "Ru",
         "name": "webGold",
         "about": "Описание.",
-        "image": "",
+        "image": "https://webgold.wrioos.com/img/cover1-200x200.jpg",
         "url": "https://webgold.wrioos.com/ru"
         },
         {
@@ -30,7 +35,7 @@
         "inLanguage": "Ru",
         "name": "Titter",
         "about": "Описание.",
-        "image": "",
+        "image": "https://titter.wrioos.com/img/cover1-200x200.jpg",
         "url": "https://titter.wrioos.com/ru"
         },
         {
@@ -38,7 +43,7 @@
         "inLanguage": "Ru",
         "name": "Rating",
         "about": "Описание.",
-        "image": "",
+        "image": "https://rating.wrioos.com/img/cover1-200x200.jpg",
         "url": "https://rating.wrioos.com/ru"
         },
         {
@@ -46,7 +51,7 @@
         "inLanguage": "Ru",
         "name": "Default WRIO Theme",
         "about": "Описание.",
-        "image": "",
+        "image": "https://default.wrioos.com/img/cover1-200x200.jpg",
         "url": "https://default.wrioos.com/ru"
         },
         {
@@ -54,10 +59,12 @@
         "inLanguage": "Ru",
         "name": "Login",
         "about": "Описание.",
-        "image": "",
+        "image": "https://login.wrioos.com/img/cover1-200x200.jpg",
         "url": "https://login.wrioos.com/ru"
         }
-        ]
+        ],
+        "author": "",
+        "comment": ""
         }
     </script>
 
