--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         "inLanguage": "En",
         "keywords": "WRIO Internet OS",
         "name": "WRIO Internet OS",
-        "about": "WRIO Internet OS is a gate to semantic, decentralized and secure Internet.",
+        "about": "WRIO Internet OS, or simple WRIO OS is a cloud service with open source code, designed to navigate through decentralized, semantic and secure Internet. Some call it Web 3.0, and it is an evolutionary replacement of today’s Web 2.0. The project is based on blockchain technology enhanced with the functionality of a Intelligent Assistant.",
         "articleBody": [
-        "/* Disclaimer: This White Paper is intended for general readers. You do not need to be sound on how the Internet works to understand underlying concepts. However, those readers that wish to go deeply into the technicals can find more details in “WRIO OS Architecture” section of this book. */",
-        "/* The project is in the initial stage of development. The functions described below will be added as it progresses. */",
+        "/* Disclaimer: This White Paper is intended for general readers. You do not need to be sound on how the Internet works to understand underlying concepts. However, those readers that wish to go deeply into the technicals can find more details in “WRIO OS Architecture” section of this book.",
+        "/* The project is in the initial stage of development. The functions described below will be added as it progresses.",
         "WRIO Internet OS, or simply WRIO OS, is your window to the world of decentralized, semantic and secure Internet based on the blockchain technology, with the function of Intelligent Assistant. The name originates from the acronym of “webRunes Input/Output Internet Operating System”, and it intends to replace desktop OS’s in the future.",
         "At the dawn of the computer era, due to the stand-alone nature of computers there was a need in desktop operating systems. Now, at the Internet age, we have an opportunity to use network resources, which contributed to the rise of numerous cloud services such as Dropbox or Netflix. Web-technologies provide an opportunity to get rid of the necessity to install desktop applications, yet WRIO OS goes even further: by developing and uniting cloud services we arrive at the situation when we do not need the desktop OS at all. Access to the Internet allows to replace it with just a browser thus excluding the need in powerful processors and large memory size, and broadband access does the same for high capacity HDDs.",
         "There were many attempts to develop a web based OS. However, those were a copy of desktop OS, which resulted in the development of a system designed to perform cloud tasks through the desktop approach, and, consequently, such attempts failed.",
@@ -92,7 +92,7 @@
         "@type": "Article",
         "name": "WRIO OS Architecture",
         "about": "No info yet.",
-        "url": "#?'WRIO OS Architecture':3,245"
+        "url": "#?'WRIO OS Architecture':3,247"
         },
         {
         "@type": "Article",
@@ -206,7 +206,7 @@
         "@type": "Article",
         "name": "",
         "about": "Peer-to-peer (P2P) computing or networking is a distributed application architecture that partitions tasks or work loads between peers. Peers are equally privileged, equipotent participants in the application. They are said to form a peer-to-peer network of nodes.",
-        "url": "https://en.wikipedia.org/wiki/Peer-to-peer?'peer-to-peer':13,45"
+        "url": "https://en.wikipedia.org/wiki/Peer-to-peer?'peer-to-peer':13,45,external"
         },
         {
         "@type": "Article",
@@ -254,7 +254,7 @@
         "@type": "Article",
         "name": "",
         "about": "The Semantic Web provides a common framework that allows data to be shared and reused across application, enterprise, and community boundaries. The term was coined by Tim Berners-Lee for a web of data that can be processed by machines.",
-        "url": "https://en.wikipedia.org/wiki/Semantic_Web?'semantic':20,6,external"
+        "url": "https://en.wikipedia.org/wiki/Semantic_Web?'Semantic Web':20,6,external"
         },
         {
         "@type": "Article",
