--- a/ru/дао/инвестиции_и_токены/index.html
+++ b/ru/дао/инвестиции_и_токены/index.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="webRunes">
-    <meta name="keywords" content="WRIO Internet OS, ДАО">
-    <title>ДАО</title>
+    <meta name="keywords" content="WRIO Internet OS, ДАО, инвестиции, токены">
+    <title>Инвестиции и токены</title>
 
     <script type="application/ld+json">
         {
         "@context": "https://schema.org",
         "@type": "Article",
         "inLanguage": "Ru",
-        "keywords": "WRIO Internet OS, ДАО",
-        "name": "ДАО",
-        "about": "Раздел содержит всю необходимую информацию касательно структуры ДАО, финансов и стратегии развития.",
+        "keywords": "WRIO Internet OS, ДАО, инвестиции, токены",
+        "name": "Инвестиции и токены",
+        "about": "Привлечение инвестиций с помощью выпуска новых токенов напрямую связан с фактором. Фактор — это множитель, значение которого основано на разумно предполагаемых перспективах развития исходя из динамики изменения рейтинга. Рейтинг, в первую очередь, — это значение отражающее уровень популярности и доверия, которое непосредственно влияет на скорость привлечения новых пользователей и, следовательно, определяет стоимость токенов ДАО. Таким образом, именно изменение рейтинга между раундами является основополагающим мерилом для расчета фактора следующего раунда.",
         "articleBody": [
-        "Раздел содержит всю необходимую информацию касательно структуры ДАО, финансов и стратегии развития."
+        "Привлечение инвестиций с помощью выпуска новых токенов напрямую связан с фактором. Фактор — это множитель, значение которого основано на разумно предполагаемых перспективах развития исходя из динамики изменения рейтинга. Рейтинг, в первую очередь, — это значение отражающее уровень популярности и доверия, которое непосредственно влияет на скорость привлечения новых пользователей и, следовательно, определяет стоимость токенов ДАО. Таким образом, именно изменение рейтинга между раундами является основополагающим мерилом для расчета фактора следующего раунда."
         ],
         "hasPart": [
         {
@@ -39,7 +39,7 @@
         "name": "Посевное финансирование",
         "articleBody": [
         "Объем: 2 000 000 токенов · Итого: 3 000 000",
-        "Цена: 0.002 ☉ · Factor: ↑ x2",
+        "Цена: 0.002 ☉ · Фактор: ↑ x2",
         "Привлечено средств: 4 000 ☉ · Итого: 5 000 ☉",
         "Начало: 10 апреля 2016 · Завершение: 10 апреля 2016",
         "Статус: Продано"
@@ -50,7 +50,7 @@
         "name": "Посевное финансирование",
         "articleBody": [
         "Объем: 4 000 000 токенов · Итого: 7 000 000",
-        "Цена: 0.01 ☉ · Factor: ↑ x5",
+        "Цена: 0.01 ☉ · Фактор: ↑ x5",
         "Привлечено средств: 40 000 ☉ · Итого: 45 000 ☉",
         "Начало: 21 апреля 2016 · Завершение: 21 апреля 2016",
         "Статус: Продано"
@@ -61,7 +61,7 @@
         "name": "Посевное финансирование",
         "articleBody": [
         "Объем: 8 000 000 токенов · Итого: 15 000 000",
-        "Цена: 0.15 ☉ · Factor: ↑ x15",
+        "Цена: 0.15 ☉ · Фактор: ↑ x15",
         "Привлечено средств: 1 200 000 ☉ · Итого: 1 245 000 ☉",
         "Начало: 27 мая 2016 · Завершение: 27 мая 2016",
         "Статус: Продано"
@@ -72,8 +72,7 @@
         "name": "Раунд А",
         "articleBody": [
         "Объем: 16 000 000 токенов · Итого: 31 000 000",
-        "Цена: 7.5 ☉ · Factor: ↑ x50",
-        "Привлечено средств: 1 200 000 ☉",
+        "Цена: 7.5 ☉ · Фактор: ↑ x50",
         "Начало: Весна 2017",
         "Статус: Ожидается"
         ]
@@ -92,56 +91,74 @@
         "Токены создаются каждый раз, когда инвестор перечисляет webGold в фонд ДАО во время открытого раунда. Для привлечения новых инвесторов, ДАО WRIO Internet OS выпускает каждый новый раунд удвоенное количество токенов, что обеспечивает их покупателям >50% дохода ДАО и голосов. Токены можно продать в любой момент и вернуть свои вложения, получив доход в виде увеличившейся стоимости с раунда покупки."
         ]
         },
+        {
+        "@type": "Article",
+        "inLanguage": "Ru",
+        "name": "Риски",
+        "about": "ДАО и криптовалюты основаны на технологии блокчейн, которая еще очень молода, а ее влияние на цивилизацию нам еще только предстоит узнать и осознать. Это виртуальный фронтир, где существуют бок о бок риски, прибыль и перспективы.",
+        "author": "https://webrunes.com/ru",
+        "datePublished": "2016-10-11",
+        "url": "https://alternative.webrunes.org/ru/дао/риски"
+        }
         ],
         "mentions": [
         {
         "@type": "Article",
         "name": "",
         "about": "Описание ДАО.",
-        "url": "#?'ДАО':10,39"
+        "url": "#?'регистрации ДАО':9,27"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Эксперементальный проект. Его цель — попытка предоставить децентрализованные решения в сфере финансов, бизнеса, законов и всех остальных сфер общества с минимальным, а в идеале вовсе без вмешательства государства.",
-        "url": "https://alternative.webrunes.org/ru/?'Альтернативе':10,62"
+        "url": "https://alternative.webrunes.org/ru/?'Альтернативе':9,62"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Описание финансовой стратегии.",
-        "url": "https://wrioos.com/ru/дао#Финансовая_стратегия?'дохода ДАО':42,239"
+        "url": "https://wrioos.com/ru/дао/стратегия_развития#Финансовое_планирование?'дохода ДАО':37,253"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Описание процесса голосования.",
-        "url": "#?'голосов':41,266"
+        "url": "#?'голосов':37,266"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Биржа.",
-        "url": "#?'продать':40,288"
+        "url": "#?'продать':37,288"
         }
         ],
         "image": [
         {
         "@type": "ImageObject",
-        "author": "webRunes",        
-        "contentUrl": "https://wrioos.com/ru/дао/img/percentage_ratio.png?2,0",
+        "author": "webRunes",
+        "contentUrl": "https://wrioos.com/ru/дао/img/series.png?49,0",
+        "name": "Динамика эмиссии токенов",
+        "description": [
+        "Динамика роста новых токенов в каждом отдельном раунде и их общего количества"
+        ]
+        },
+        {
+        "@type": "ImageObject",
+        "author": "webRunes",
+        "contentUrl": "https://wrioos.com/ru/дао/img/percentage_ratio.png?48,0",
         "name": "Процентное соотношение",
-        "description": [        
+        "description": [
         "Процентное соотношение выпущенных токенов в каждом раунде к их общему количеству"
         ]
         }
-        ],        
+        ],
         "author": "https://wrioos.com/ru/",
         "editor": "",
         "comment": ""
         }
     </script>
-    
+
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
